--- a/build.config.json
+++ b/build.config.json
@@ -1,6 +1,6 @@
 {
-	"appId": "com.example.app",
-	"productName": "Svelte Electron",
+	"appId": "com.whoelsebutme.app",
+	"productName": "YAT",
 	"directories": {
 		"output": "dist"
 	},
