--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,8 @@
 		"checkJs": false,
 		"paths": {
 			"$app/*": [".svelte/dev/runtime/app/*", ".svelte/build/runtime/app/*"],
-			"$lib/*": ["src/lib/*"]
+			"$lib/*": ["src/lib/*", "src/lib/utils"]
 		}
 	},
-	"include": ["src/**/*.d.ts", "src/**/*.js", "src/**/*.ts", "src/**/*.svelte", "src/electron.js"]
+	"include": ["src/**/*.d.ts", "src/**/*.cjs",  "src/**/*.js", "src/**/*.ts", "src/**/*.svelte"]
 }
