--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "sveltekit-electron",
-	"version": "0.0.1",
+	"name": "yet-another-tracker",
+	"version": "0.1.0",
 	"private": true,
-	"description": "Minimal Sveltekit + Electron starter template.",
+	"description": "YAT - Yet Another Time Tracker",
 	"main": "src/electron.cjs",
 	"type": "module",
 	"scripts": {
@@ -13,8 +13,7 @@
 		"build": "cross-env NODE_ENV=production npm run build:svelte && npm run build:electron",
 		"build:svelte": "svelte-kit build",
 		"build:electron": "electron-builder -mwl --x64 --config build.config.json",
-		"start": "svelte-kit preview",
-		"preview": "electron-builder start"
+		"preview": "svelte-kit preview"
 	},
 	"browserslist": [
 		"Chrome 89"
@@ -50,6 +49,7 @@
 		"svelte": "^3.44.2",
 		"svelte-check": "^1.6.0",
 		"svelte-feather-icons": "^3.5.0",
+		"svelte-kit": "^1.0.0",
 		"svelte-preprocess": "^4.9.8",
 		"typescript": "^4.5.2",
 		"vite": "^2.6.14"
